# datavalue-rs

./: BENCHMARKS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: compare.rs  twitter.rs
profiling/: Cargo.toml
scripts/: update_benchmarks.py
src/: datetime.rs  emit.rs  lib.rs  number.rs  owned.rs  parser.rs  ser.rs  serde_json_bridge.rs  simd.rs  value.rs
tests/: ergonomics.rs
