[package]
name = "datavalue-rs"
version = "0.2.0"
edition = "2024"
authors = ["Harishankar Narayanan <nharishankar@gmail.com>"]
license = "Apache-2.0"
description = "Bump-allocated JSON value type with a built-in zero-copy parser and serde_json-style access API."
repository = "https://github.com/GoPlasmatic/datavalue-rs"
readme = "README.md"
keywords = ["json", "arena", "bump", "parser", "value"]
categories = ["data-structures", "parser-implementations"]

[features]
default = []
# Serde Serialize for DataValue plus a DeserializeSeed adapter that takes a
# &Bump so DataValue can be deserialized from any serde data format.
serde = ["dep:serde"]
# Bidirectional bridge to `serde_json::Value` for boundary interop. Pulls in
# the `serde` feature implicitly.
serde_json = ["serde", "dep:serde_json"]
# DateTime / Duration variants (chrono-backed). Adds DataValue::DateTime and
# DataValue::Duration, with parse/format/arithmetic helpers on the inner
# types. Mirrors what `datalogic-rs` exposes today.
datetime = ["dep:chrono"]

[dependencies]
bumpalo = { version = "3", default-features = false, features = ["collections"] }
fast-float2 = { version = "0.2", default-features = false, features = ["std"] }
itoa = { version = "1", default-features = false }
ryu = { version = "1", default-features = false }
serde = { version = "1.0", default-features = false, features = ["std"], optional = true }
serde_json = { version = "1.0", default-features = false, features = ["std"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"], optional = true }

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["html_reports", "cargo_bench_support"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
simd-json = { version = "0.17", default-features = false, features = ["serde_impl"] }
sonic-rs = { version = "0.5", default-features = false }
json = { version = "0.12", default-features = false }

[[bench]]
name = "compare"
harness = false
required-features = ["serde_json"]
